03-flux-apps/16.k8s-agent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kagent-ui
  namespace: kagent
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kagent.akna.one.pl
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway-api
  hostnames:
    - kagent.akna.one.pl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kagent-ui
          port: 8080
